# delivery-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: ci.yml
docs/: description.md
migrations/: 20250108120000_initial_schema.sql  20250108120001_seed_vehicles.sql  20250108120002_add_performance_indexes.sql  20250108120003_drop_unused_index.sql  20250108120004_improve_indexes.sql
scripts/: run-db.sh  run-osrm.sh  run-sim.sh
scripts/sim/: vehicles.py
src/: error.rs  lib.rs  main.rs  state.rs
src/db/: buffer.rs  delivery.rs  mod.rs  pool.rs  telemetry.rs  traits.rs  vehicle.rs
src/dto/: delivery.rs  error.rs  fleet.rs  mod.rs  telemetry.rs  websocket.rs
src/models/: delivery.rs  ids.rs  mod.rs  vehicle.rs
src/routes/: delivery.rs  health.rs  map.rs  mod.rs  telemetry.rs
src/services/: broadcast.rs  delivery.rs  mod.rs  telemetry.rs
static/: index.html
