[package]
name = "delivery-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"
anyhow = "1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
] }
redis = { version = "1.2", features = ["tokio-comp", "aio"] }
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
